--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,9 +7,11 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:layout_marginTop="25dp"
         android:id="@+id/default_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
         android:text="@string/default_text"
         android:textSize="25sp" />
 
