--- a/app/src/main/res/drawable/circle.xml
+++ b/app/src/main/res/drawable/circle.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape android:shape="oval" xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="oval">
 
-    <solid android:color="#9FE554"/>
-    <size android:height="40dp"
-        android:width="40dp"/>
+    <solid android:color="#9FE554" />
+    <size
+        android:width="40dp"
+        android:height="40dp" />
 </shape>
