--- a/app/src/main/res/layout/activity_contacts_screen.xml
+++ b/app/src/main/res/layout/activity_contacts_screen.xml
@@ -6,10 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".ContactsScreen">
 
+
     <TextView
         android:id="@+id/profile"
         android:layout_width="142dp"
         android:layout_height="135dp"
+        android:layout_marginTop="68dp"
         android:background="@drawable/rounded_textview"
         android:clickable="true"
         android:gravity="center"
@@ -17,9 +19,10 @@
         android:textColor="@android:color/black"
         android:textSize="50sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.531"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="92dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/nametv"
