--- a/app/src/main/res/layout/listitem.xml
+++ b/app/src/main/res/layout/listitem.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -12,15 +13,27 @@
         android:layout_margin="25dp"
         android:orientation="horizontal">
 
-        <TextView
+
+        <androidx.cardview.widget.CardView
             android:id="@+id/profile"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:background="@drawable/rounded_textview"
-            android:gravity="center"
-            android:text="H"
-            android:textColor="@android:color/black"
-            android:textSize="30sp" />
+            app:cardBackgroundColor="@color/purple_500"
+            app:cardCornerRadius="80dp">
+
+            <TextView
+                android:id="@+id/text"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="Hi"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="30sp"
+                android:textStyle="bold" />
+
+        </androidx.cardview.widget.CardView>
+
 
         <LinearLayout
             android:layout_width="match_parent"
